[tool.poetry]
name = "sslock"
version = "0.0.1"
description = "low-level file locking for parallel access on gpfs (spectrum storage)"
authors = ["Paul Watkins <pwatkins@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
numpy = ">=1.20"
dill = "^0.3"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4.4"

[build-system]
requires = ["poetry-core", "numpy", "setuptools"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.build]
script = "build.py"
generate-setup-file = true
